# optilearn

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: code_of_conduct.md  examples.md  faq.md  installation.md
optilearn/: agent.py  base_object.py  experiment.py  meta_constructor.py  object_maps.py
optilearn/configs/: config.yml  constants.py  strings.py
optilearn/configs/environments/: churn_prediction.yml  image_classification.yml  image_classification_mnist.yml  image_classification_mnist_so.yml
optilearn/configs/model/: lgbm_config.yml  mlp_config.yml  nn_config.yml  resnet18_config.yml  sk_config.yml
optilearn/environments/: __init__.py  abstract_env.py  classification_env.py  responses.py
optilearn/evaluation/: evaluation.py  metrics.py  neptune_logger.py  visualization.py
optilearn/inference/: inferencer.py  model_registry.py  sk_inferencer.py  torch_inferencer.py
optilearn/models/: __init__.py  abstract_model.py  classification_lgbm.py  classification_nn.py  classification_sk.py
optilearn/usecase_template/: object_maps.py  run_training.py
optilearn/utils/: custom_types.py  data_frame_analyzer.py  experiment_utils.py  loss_funcs.py  u_funcs.py  utils.py
scripts/: run_training.py
tests/: conftest.py  test_meta_constructor.py
tests/data_loaders/: test_image_loader.py  test_tabular_data_loader.py
tests/models/: model_fixtures.py  test_abstract_model.py  test_classification_lgbm_model.py  test_classification_nn_model.py  test_classification_sk_model.py
tests/testing_data/: tabular.csv
(+23 files in other folders)
